--- a/package.json
+++ b/package.json
@@ -10,15 +10,7 @@
   "keywords": [],
   "author": "Andreea Stefan",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
-    "babel-loader": "^8.0.6",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
-  },
+  "devDependencies": {},
   "dependencies": {
     "base-64": "^1.0.0",
     "from": "^0.1.7",
@@ -33,6 +25,7 @@
     "ipld-block": "latest",
     "it-last": "latest",
     "last": "latest",
-    "regenerator-runtime": "^0.13.3"
+    "regenerator-runtime": "^0.13.3",
+    "text-encoding": "^0.7.0"
   }
 }
